[workspace]
resolver = "2"
members = [
    "contracts/onchainquant",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["liuck8080@163.com"]

[workspace.dependencies]
ft-logic = { git = "https://github.com/gear-foundation/dapps-sharded-fungible-token.git", tag = "2.1.4" }
ft-main = { git = "https://github.com/gear-foundation/dapps-sharded-fungible-token.git", tag = "2.1.4" }
ft-main-io = { git = "https://github.com/gear-foundation/dapps-sharded-fungible-token.git", tag = "2.1.4" }
ft-storage = { git = "https://github.com/gear-foundation/dapps-sharded-fungible-token.git", tag = "2.1.4" }
gclient = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
gear-core = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47", features = ["wasm-opt"] }
gmeta = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
gsdk = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
gtest = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread"] }
rand = { version = "0.8", default-features = false }
rand_xoshiro = "0.6"
sp-core-hashing = { version = "11", default-features = false }

onchainquant-io = { path = "contracts/onchainquant/io" }
