[package]
name = "onchainquant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd.workspace = true
onchainquant-io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
onchainquant-io.workspace = true

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }